updated scala to 2.13.11._ and jdk to 20.a
Sanity check for the new virtual thread runs